--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -856,6 +856,11 @@ template {
     font-weight: 600;
     margin-top: 30px;
     line-height: 18px;
+    transition: 300ms;
+}
+
+.auth-form .form .submit-button:hover {
+    background-color: #1C6FF2;
 }
 
 .auth-form .addition {
@@ -920,6 +925,10 @@ template {
 .signup .terms-n-policy .agreement .rules {
     color: #1E75FF;
     cursor: pointer;
+}
+
+.signup .terms-n-policy .agreement .rules:hover {
+    border-bottom: 1px solid #1E75FF;
 }
 
 .signup .container .addition {
@@ -1290,6 +1299,7 @@ fieldset {
     color: #FAFAFB;
     border-radius: 10px;
     cursor: pointer;
+    transition: 200ms;
 }
 
 .home .forgot-password-modal .addition {
@@ -1318,17 +1328,20 @@ fieldset {
 
 .privacy-and-policy-agreement {
     position: absolute;
-    top: 25px;
-    margin: 0 auto;
-    left: 0;
+    top: 0;
     right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
     transition: 400ms;
     width: 570px;
-    z-index: 2;
+    z-index: 3;
     padding: 30px;
     background-color: #1C1C24;
     border-radius: 20px;
     box-shadow: 0px 0px 20px 5px #000000;
+    max-height: 850px;
+    transform: translateY(-120%);
 }
 
 .privacy-and-policy-agreement .heading {
@@ -1738,6 +1751,7 @@ fieldset {
     width: 100%;
     height: 100%;
     background: #13131A;
+    position: relative;
 }
 
 .dashboard .nav {
@@ -2096,6 +2110,7 @@ fieldset {
     min-height: 85vh;
     background: #13131A;
     margin-top: 50px;
+    position: relative;
 }
 
 .dashboard .main .lobby a {
@@ -2431,6 +2446,8 @@ fieldset {
     border-radius: 50%;
     position: relative;
     cursor: pointer;
+    transition: 200ms;
+    z-index: 1;
 }
 
 .dashboard .main .lobby .video .play {
@@ -2441,6 +2458,8 @@ fieldset {
     left: 8px;
     right: 0;
     cursor: pointer;
+    transition: 200ms;
+    z-index: 2;
 }
 
 .dashboard .main .lobby .dashboard-slider {
@@ -3129,6 +3148,10 @@ fieldset {
     border: none;
     cursor: pointer;
     transition: 200ms;
+}
+
+.home .forgot-password-modal .forgot-password .reset-password:hover {
+    background-color: #1C6FF2;
 }
 
 .dashboard .main .product-info .popular-products .popular-product .buttons .button.buy:hover {
