--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -339,6 +339,7 @@ fieldset {
     color: #FAFAFB;
     border-radius: 10px;
     cursor: pointer;
+    transition: 200ms;
 }
 
 .home .forgot-password-modal .addition {
@@ -367,17 +368,20 @@ fieldset {
 
 .privacy-and-policy-agreement {
     position: absolute;
-    top: 25px;
-    margin: 0 auto;
-    left: 0;
+    top: 0;
     right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
     transition: 400ms;
     width: 570px;
-    z-index: 2;
+    z-index: 3;
     padding: 30px;
     background-color: #1C1C24;
     border-radius: 20px;
     box-shadow: 0px 0px 20px 5px #000000;
+    max-height: 850px;
+    transform: translateY(-120%);
 }
 
 .privacy-and-policy-agreement .heading {
@@ -787,6 +791,7 @@ fieldset {
     width: 100%;
     height: 100%;
     background: #13131A;
+    position: relative;
 }
 
 .dashboard .nav {
@@ -1145,6 +1150,7 @@ fieldset {
     min-height: 85vh;
     background: #13131A;
     margin-top: 50px;
+    position: relative;
 }
 
 .dashboard .main .lobby a {
@@ -1480,6 +1486,8 @@ fieldset {
     border-radius: 50%;
     position: relative;
     cursor: pointer;
+    transition: 200ms;
+    z-index: 1;
 }
 
 .dashboard .main .lobby .video .play {
@@ -1490,6 +1498,8 @@ fieldset {
     left: 8px;
     right: 0;
     cursor: pointer;
+    transition: 200ms;
+    z-index: 2;
 }
 
 .dashboard .main .lobby .dashboard-slider {
@@ -2178,6 +2188,10 @@ fieldset {
     border: none;
     cursor: pointer;
     transition: 200ms;
+}
+
+.home .forgot-password-modal .forgot-password .reset-password:hover {
+    background-color: #1C6FF2;
 }
 
 .dashboard .main .product-info .popular-products .popular-product .buttons .button.buy:hover {
