--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2525,6 +2525,11 @@ fieldset {
     font-size: 12px;
     line-height: 18px;
     color: #FAFAFB;
+    transition: 300ms;
+}
+
+.dashboard .main .subscriptions .activate-product .activate:hover {
+    background-color: #1C6FF2;
 }
 
 .dashboard .main .subscriptions .activate-product .terms {
