--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -96,12 +96,6 @@
     content: none;
 }
 
-.popular-products-slider .slick-slide {
-    padding-top: 125px;
-    min-height: 550px;
-    margin-top: 70px;
-}
-
 .popular-products-slider .slick-arrow.slick-prev {
     background-image: url('../images/arrow-left-slider.png');
     background-position: 49% center;
@@ -117,6 +111,10 @@
 .popular-products-slider .slick-slide {
     display: flex !important;
     justify-content: center;
+    align-items: flex-end;
+    padding-top: 125px;
+    min-height: 550px;
+    margin-top: 30px;
 }
 
 .popular-products-slider .slick-slide .cover {
@@ -134,7 +132,7 @@
     border-radius: 10px;
     background-color: #1C1C24;
     margin: 0 auto;
-    max-height: 370px;
+    height: 370px;
     justify-content: flex-end;
     position: relative;
     min-width: 370px;
@@ -150,11 +148,20 @@
     margin-top: 20px;
 }
 
+.popular-products-slider .popular-product .title .product-title {
+    font-weight: 600;
+    letter-spacing: .1px;
+    line-height: 24px;
+}
+
 .popular-products-slider .popular-product .description {
-    color: rgba(255, 255, 255, .8);
-    font-size: .8rem;
+    color: #B5B5BE;
+    font-size: 14px;
     margin-top: 5px;
-    width: 300px;
+    letter-spacing: .1px;
+    line-height: 24px;
+    font-family: Roboto, sans-serif;
+    width: 330px;
 }
 
 .popular-products-slider .popular-product .buttons {
@@ -166,7 +173,7 @@
     display: flex;
     justify-content: center;
     font-size: 12px;
-    width: 45%;
+    width: 160px;
     line-height: 18px;
     margin-top: 30px;
     border-radius: 10px;
