--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1682,7 +1682,6 @@ fieldset {
 
 .dashboard .main .product-info .info .general {
     background-color: #1C1C24;
-    padding: 0 10px;
     margin-top: 30px;
     border-radius: 10px;
 }
@@ -1741,10 +1740,12 @@ fieldset {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: .1px;
+    background-color: rgba(41, 41, 50, 0.5);
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown .items .item:first-of-type {
-    padding-top: 20px;
+    padding-top: 16px;
+    margin-top: 4px;
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown .items .item:last-of-type {
@@ -1769,12 +1770,20 @@ fieldset {
     margin: 0 30px;
 }
 
-.dashboard .main .product-info .product .cover {
+.dashboard .main .product-info .cover {
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
     height: 220px;
     border-radius: 5px;
+}
+
+.dashboard .main .product-info .product {
+    padding: 0 10px;
+}
+
+.dashboard .main .product-info .product .container:first-of-type {
+    flex-direction: column;
 }
 
 .dashboard .main .product-info .product .main {
@@ -2763,6 +2772,8 @@ fieldset {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 48px 24px;
 }
 
