--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1663,7 +1663,6 @@ fieldset {
 }
 
 .dashboard .main .product-info .container:first-of-type {
-    position: relative;
     display: flex;
     justify-content: space-between;
 }
@@ -1678,6 +1677,10 @@ fieldset {
 
 .dashboard .main .product-info .info {
     width: calc(770px - 15px);
+}
+
+.dashboard .main .product-info .info .general .product-wrap {
+    position: relative;
 }
 
 .dashboard .main .product-info .info .general {
@@ -1774,7 +1777,7 @@ fieldset {
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
-    height: 220px;
+    height: 200px;
     border-radius: 5px;
 }
 
@@ -1786,12 +1789,25 @@ fieldset {
     flex-direction: column;
 }
 
+.dashboard .main .product-info .product .logo {
+    border-radius: 10px;
+    border: 5px solid #292932;
+    width: 84px;
+    height: 84px;
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    left: 30px;
+    top: 15%;
+}
+
 .dashboard .main .product-info .product .main {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 50px;
     background-color: #1C1C24;
     min-height: auto;
+    position: static;
 }
 
 .dashboard .main .product-info .product .general-info {
