--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1778,7 +1778,7 @@ fieldset {
     background-position: center center;
     width: 100%;
     height: 200px;
-    border-radius: 5px;
+    border-radius: 10px 10px 0 0;
 }
 
 .dashboard .main .product-info .product {
@@ -2533,7 +2533,7 @@ fieldset {
 }
 
 .dashboard .main .subscriptions .activate-product .activate-product-label {
-    font-size: 24px;
+    font-size: 23.37px;
     line-height: 32px;
     color: #FAFAFB;
     letter-spacing: .1px;
@@ -2947,6 +2947,7 @@ fieldset {
     font-size: 12px;
     line-height: 15px;
     font-weight: 500;
+    user-select: none;
 }
 
 .dashboard .main .FAQ .answers .people-percent .rate-answer:hover {
