--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -560,7 +560,7 @@ template {
 .popular-products-slider .slick-slide .cover {
     margin: 0 auto;
     min-height: 330px;
-    width: 330px;
+    max-width: 330px;
     border-radius: 10px;
     border: 3px solid #44444F;
 }
