--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -924,7 +924,7 @@ fieldset {
 .user-menu .avatar {
     border-radius: 50%;
     height: 46px;
-    width: 46px;
+    min-width: 46px;
     display: flex;
     align-items: center;
     position: relative;
