--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,6 +32,8 @@ html {
     color: #fff;
     scrollbar-width: auto;
     scrollbar-color: #1C1C24 #13131A;
+    width: 100%;
+    height: 100%;
 }
 
 body {
@@ -40,6 +42,8 @@ body {
     font-weight: 400;
     background-color: #020100;
     font-size: 16px;
+    width: 100%;
+    height: 100%;
 }
 
 form input {
